--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "angular": "^1.5.3",
     "angular-route": "^1.5.3",
     "body-parser": "^1.15.0",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "jsforce": "^1.6.0",
     "mongoose": "^4.4.10"
   },
   "devDependencies": {},
